--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,17 @@ body {
     text-wrap: balance;
   }
 }
+
+.mask-gradient {
+  mask-image: linear-gradient(
+    90deg,
+    transparent,
+    #000 20%,
+    #000 80%,
+    transparent
+  );
+}
+
+.padding-16-0 {
+  padding: 16px 0;
+}
